--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,3 +20,17 @@ jobs:
 
            - name: Run Build Script
              run: ./scripts/buildprod.sh
+
+           - id: 'auth'
+             uses: 'google-github-actions/auth@v2'
+             with:
+               credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+           - name: 'Set up Cloud SDK'
+             uses: 'google-github-actions/setup-gcloud@v2'
+
+           - name: 'Use gcloud CLI'
+             run: 'gcloud info'
+
+           - name: Build docker image and push to Google Artifact Registry 
+             run: gcloud builds submit --tag us-central1-docker.pkg.dev/analog-button-452119-i6/notely-ar-repo/notely:latest .
