--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,3 +34,6 @@ jobs:
 
            - name: Build docker image and push to Google Artifact Registry 
              run: gcloud builds submit --tag us-central1-docker.pkg.dev/analog-button-452119-i6/notely-ar-repo/notely:latest .
+
+           - name: Deploy to Cloud Run
+             run: gcloud run deploy notely --image us-central1-docker.pkg.dev/analog-button-452119-i6/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project analog-button-452119-i6 --max-instances=4
