--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,39 +1,48 @@
 name: cd
 
 on:
-    push:
-      branches: [main]
+  push:
+    branches: [main]
 
 jobs:
-    deploy:
-        name: Deploy
-        runs-on: ubuntu-latest
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
 
-        steps:
-           - name: Check out code
-             uses: actions/checkout@v4
-     
-           - name: Set up Go
-             uses: actions/setup-go@v5
-             with:
-               go-version: "1.23.0"
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
-           - name: Run Build Script
-             run: ./scripts/buildprod.sh
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
 
-           - id: 'auth'
-             uses: 'google-github-actions/auth@v2'
-             with:
-               credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.23.0"
 
-           - name: 'Set up Cloud SDK'
-             uses: 'google-github-actions/setup-gcloud@v2'
+      - name: Install goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
-           - name: 'Use gcloud CLI'
-             run: 'gcloud info'
+      - name: Run Build Script
+        run: ./scripts/buildprod.sh
 
-           - name: Build docker image and push to Google Artifact Registry 
-             run: gcloud builds submit --tag us-central1-docker.pkg.dev/analog-button-452119-i6/notely-ar-repo/notely:latest .
+      - id: auth
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
-           - name: Deploy to Cloud Run
-             run: gcloud run deploy notely --image us-central1-docker.pkg.dev/analog-button-452119-i6/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project analog-button-452119-i6 --max-instances=4
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Use gcloud CLI
+        run: gcloud info
+
+      - name: Build docker image and push to Google Artifact Registry
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/analog-button-452119-i6/notely-ar-repo/notely:latest
+
+      - name: Run migrations
+        run: ./scripts/migrateup.sh
+      
+      - name: Deploy to Cloud Run
+        run: gcloud run deploy notely --image us-central1-docker.pkg.dev/analog-button-452119-i6/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project analog-button-452119-i6 --max-instances=4
